--- a/DomoticaApp/android/gradle.properties
+++ b/DomoticaApp/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=futura.keystore
+MYAPP_RELEASE_KEY_ALIAS=futura
+MYAPP_RELEASE_STORE_PASSWORD=futura18
+MYAPP_RELEASE_KEY_PASSWORD=futuraSA
