--- a/DomoticaApp/package.json
+++ b/DomoticaApp/package.json
@@ -22,11 +22,12 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-modal": "^6.5.0",
     "react-native-modal-datetime-picker": "^5.1.0"
-  }, 
-  "resolutions":{
-      "metro-bundler": "0.20.2",
-      "color-convert": "1.9.1",
-      "uglify-js": "3.1.9"
+  },
+  "resolutions": {
+    "metro-bundler": "0.20.2",
+    "color-convert": "1.9.1",
+    "uglify-js": "3.1.9"
   }
 }
